# edot

./: Cargo.toml  README.md
crates/edot_editor/: Cargo.toml
crates/edot_editor/src/: lib.rs
crates/edot_editor/src/tab/: mod.rs
crates/edot_editor/src/tab/game_view/: mod.rs  scene.rs  viewport.rs
crates/edot_editor/src/tab/hierarchy/: mod.rs
crates/edot_editor/src/tab/inspector/: mod.rs
crates/edot_gizmos/: Cargo.toml
crates/edot_gizmos/examples/: hello_gizmos.rs
crates/edot_gizmos/src/: lib.rs
crates/edot_inspector/: Cargo.toml
crates/edot_inspector/examples/: entity_component.rs
crates/edot_inspector/src/: buffer.rs  lib.rs  root.rs
crates/edot_inspector/src/inspectors/: mod.rs
crates/edot_inspector/src/primitive/: mod.rs  numeric.rs  spatial.rs
crates/edot_tab/: Cargo.toml
crates/edot_tab/src/: lib.rs  tab.rs  tab_manager.rs
