[package]
name = "edot"
version.workspace = true
edition.workspace = true

[workspace]
members = [
    "crates/*"
]

[workspace.package]
version = "0.1.0"
edition = "2021"


[dependencies]
bevy.workspace = true
bevy_egui.workspace = true
egui_dock.workspace = true
edot_tab.workspace = true
edot_editor.workspace = true
edot_inspector.workspace = true

[workspace.dependencies]
bevy = "0.14.2"
bevy_egui = "0.29.0"
egui_dock = "0.13.0"
edot_tab = { path = "crates/edot_tab" }
edot_editor = { path = "crates/edot_editor" }
edot_inspector = { path = "crates/edot_inspector" }
